fix: change overflow property from scroll to auto for html and body

--- a/src/index.css
+++ b/src/index.css
@@ -47,7 +47,7 @@
   }
 
   html {
-    overflow-y: scroll;
+    overflow-y: auto;
     scrollbar-gutter: stable;
   }
 }
@@ -59,7 +59,7 @@
 
   body {
     @apply bg-background text-foreground font-sans;
-    overflow-y: scroll;
+    overflow-y: auto;
   }
 }
 
